@@ -1,6 +1,8 @@
 accerciser_PYTHON = accerciser.py \
 	accessible_treeview.py \
 	i18n.py \
+	script_playback.py \
+	i18n.py \
 	icons.py \
 	node.py \
 	plugin_manager.py \
