@@ -1,3 +1,11 @@
+2007-03-15  Eitan Isaacson  <eitan@ascender.com>
+
+	* plugins/Makefile.am: 
+	* plugins/script_recorder.py: Added script_recorder.py (bug 419129).
+	* src/lib/accerciser/Makefile.am: 
+	* src/lib/accerciser/script_playback.py: Added script_playback.py 
+	(bug 419129).
+
 2007-03-15 Peter Parente  <parente@cs.unc.edu>
 
 	* pyreqs.py: Added check for wnck
